--- a/public/access/mijia/index.print.html
+++ b/public/access/mijia/index.print.html
@@ -35,18 +35,18 @@
     <link href="http://localhost:1313/access/mijia/index.html" rel="canonical" type="text/html" title="将米家设备接入HomeAssistant :: HaBox 技术支持站">
     <link href="../../access/mijia/index.xml" rel="alternate" type="application/rss+xml" title="将米家设备接入HomeAssistant :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1725547331" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725547331" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1725547331" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1725547331" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725547331" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1725547331" rel="stylesheet">
-    <link href="../../css/fonts.css?1725547331" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725547331" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1725547331" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1725547331" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1725547331" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1725547331" rel="stylesheet">
-    <link href="../../css/print.css?1725547331" rel="stylesheet" media="print">
-    <link href="../../css/format-print.css?1725547331" rel="stylesheet">
-    <script src="../../js/variant.js?1725547331"></script>
+    <link href="../../css/fontawesome-all.min.css?1725700861" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725700861" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1725700861" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1725700861" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725700861" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1725700861" rel="stylesheet">
+    <link href="../../css/fonts.css?1725700861" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725700861" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1725700861" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1725700861" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1725700861" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1725700861" rel="stylesheet">
+    <link href="../../css/print.css?1725700861" rel="stylesheet" media="print">
+    <link href="../../css/format-print.css?1725700861" rel="stylesheet">
+    <script src="../../js/variant.js?1725700861"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -114,16 +114,16 @@
 <h3 id="1-安装-xiaomi-miot-atuo">1 安装 Xiaomi Miot Atuo</h3>
 <p>接下来，我们需要安装 “Xiaomi Miot Atuo” 集成以将米家设备接入HomeAssistant。</p>
 <p>进入 HACS 页面，清除筛选方式（默认只显示已下载的）</p>
-<p><a href="#R-image-7596b16058f0c0a2e55201fec7ec29f9" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/70e2335f30d0ac09481483ab161fd31c8ccdae7d.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-7596b16058f0c0a2e55201fec7ec29f9"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/70e2335f30d0ac09481483ab161fd31c8ccdae7d.jpeg"></a></p>
+<p><a href="#R-image-df656c3a744759e2993960effc63560a" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/70e2335f30d0ac09481483ab161fd31c8ccdae7d.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-df656c3a744759e2993960effc63560a"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/70e2335f30d0ac09481483ab161fd31c8ccdae7d.jpeg"></a></p>
 <p>然后在搜索框输入“xiaomi miot”，出来后点击它</p>
-<p><a href="#R-image-a4991e874a9bb14ce06dc4c7d9d11e41" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/7dbb3b2832a340b7144704101831281b78997f9a.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-a4991e874a9bb14ce06dc4c7d9d11e41"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/7dbb3b2832a340b7144704101831281b78997f9a.png"></a></p>
+<p><a href="#R-image-087050981e73c8067cf595f40389008c" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/7dbb3b2832a340b7144704101831281b78997f9a.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-087050981e73c8067cf595f40389008c"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/7dbb3b2832a340b7144704101831281b78997f9a.png"></a></p>
 <p>点击右下角DOWNLOAD进行下载</p>
-<p><a href="#R-image-b54a3d614aad65cb09f1ad374138465b" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/c2e5a0057e07c7c71caa918194f809e2caa43ed4.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-b54a3d614aad65cb09f1ad374138465b"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/c2e5a0057e07c7c71caa918194f809e2caa43ed4.png"></a></p>
-<p><a href="#R-image-cbb98101591121c59a14e11ed9e9d601" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/4052018b771c4df4176b353895c0596dcfb258a2.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-cbb98101591121c59a14e11ed9e9d601"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/4052018b771c4df4176b353895c0596dcfb258a2.jpeg"></a></p>
+<p><a href="#R-image-0d42d12a08ce160a10a492ea5531a62b" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/c2e5a0057e07c7c71caa918194f809e2caa43ed4.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-0d42d12a08ce160a10a492ea5531a62b"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/c2e5a0057e07c7c71caa918194f809e2caa43ed4.png"></a></p>
+<p><a href="#R-image-0579ee9cc4faf6d7973cc4e5e94641c4" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/4052018b771c4df4176b353895c0596dcfb258a2.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-0579ee9cc4faf6d7973cc4e5e94641c4"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/4052018b771c4df4176b353895c0596dcfb258a2.jpeg"></a></p>
 <p>安装完集成之后需要重启 HomeAssistant。
 配置 → 系统 右上角有重启按钮</p>
 <h3 id="2-配置-xiaomi-miot-atuo">2 配置 Xiaomi Miot Atuo</h3>
@@ -131,41 +131,36 @@
 <p>点击“设置”，选择“设备与服务”
 切换到 “设备” 选项卡， 然后点击右下角 “添加设备”
 然后输入“xiaomi”，然后选择&quot;Xiaomi Miot Auto&quot;</p>
-<p><a href="#R-image-66982d7763776c27daa439b207d4f3a4" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/6522b231a80bf78d487a8fc545347c4b350d2730.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-66982d7763776c27daa439b207d4f3a4"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/6522b231a80bf78d487a8fc545347c4b350d2730.jpeg"></a></p>
+<p><a href="#R-image-bd985c87c6e3e48ecfcce55131e5c3d8" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/6522b231a80bf78d487a8fc545347c4b350d2730.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-bd985c87c6e3e48ecfcce55131e5c3d8"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/6522b231a80bf78d487a8fc545347c4b350d2730.jpeg"></a></p>
 <p>选择“账号集成”，登录小米账号获取设备信息。</p>
-<p><a href="#R-image-0bec3850772e93912c193b6e68d4ffc2" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/cd71249cb01282859a521a8a373a6e5629323f92.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-0bec3850772e93912c193b6e68d4ffc2"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/cd71249cb01282859a521a8a373a6e5629323f92.jpeg"></a></p>
-<p><a href="#R-image-2211a4e9771305e951fabda49cfde5bf" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/92f4e0e5a705997eb38b985073bb5c8fa47a881a.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-2211a4e9771305e951fabda49cfde5bf"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/92f4e0e5a705997eb38b985073bb5c8fa47a881a.jpeg"></a></p>
+<p><a href="#R-image-fb7253336e375eeb4a46a905308d7acf" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/cd71249cb01282859a521a8a373a6e5629323f92.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-fb7253336e375eeb4a46a905308d7acf"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/cd71249cb01282859a521a8a373a6e5629323f92.jpeg"></a></p>
+<p><a href="#R-image-12fb8532c09d2d4e5eb309b56e838fa4" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/92f4e0e5a705997eb38b985073bb5c8fa47a881a.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-12fb8532c09d2d4e5eb309b56e838fa4"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/92f4e0e5a705997eb38b985073bb5c8fa47a881a.jpeg"></a></p>
 <p>按照配置指引完成剩余步骤，
 这里可以根据自身情况默认选择排除模式还是包含模式
 在设备列表中你想要接入 HomeAssistant 的设备。
 排除模式就是将设备列表中没有勾选色设备接入到Homeassistant
 包含模式就是将设备列表中已勾选的设备接入到Homeassistant</p>
-<p><a href="#R-image-53dfdf19aec1c133223a73155427b4dd" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/c403c5c6840ffcc7de4c78bdedd16c2ade91c357.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-53dfdf19aec1c133223a73155427b4dd"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/c403c5c6840ffcc7de4c78bdedd16c2ade91c357.jpeg"></a></p>
+<p><a href="#R-image-17e6e9e1a7ec39bae2561b093c5d5e65" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/c403c5c6840ffcc7de4c78bdedd16c2ade91c357.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-17e6e9e1a7ec39bae2561b093c5d5e65"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/c403c5c6840ffcc7de4c78bdedd16c2ade91c357.jpeg"></a></p>
 <p>接下来就是设置设备所在区域。这样就算是将米家智能设&gt; 备接入进来了。</p>
 <blockquote>
 <p>上面有一句话：如果想集成网关子设备，请直接选择子设备接入，只接入网关不会自动集成子设备。自己体会，至此就算接入完成了。</p>
 </blockquote>
 <p>回到概览，就可以看到我们刚才接入的设备了</p>
-<p><a href="#R-image-db2cf7fb3523ee20fd44c0875d156dbe" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/55cbe342ce51cb278d4599e0061df76d510d5b0b.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-db2cf7fb3523ee20fd44c0875d156dbe"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/55cbe342ce51cb278d4599e0061df76d510d5b0b.jpeg"></a></p>
+<p><a href="#R-image-18ab1faa5b310037b020057da6aa0d89" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/55cbe342ce51cb278d4599e0061df76d510d5b0b.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-18ab1faa5b310037b020057da6aa0d89"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/55cbe342ce51cb278d4599e0061df76d510d5b0b.jpeg"></a></p>
 <p>在配置 - 设备与服务中就能看到Xiaomi Miot Auto</p>
-<p><a href="#R-image-5f8ac12b0d5f5b538eb653570594bb48" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/ad4e3cd4220230604a9b3354a652d2566cc1a322.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-5f8ac12b0d5f5b538eb653570594bb48"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/ad4e3cd4220230604a9b3354a652d2566cc1a322.jpeg"></a></p>
+<p><a href="#R-image-98eb11be28bf894c1b70c036fbaddec0" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/ad4e3cd4220230604a9b3354a652d2566cc1a322.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-98eb11be28bf894c1b70c036fbaddec0"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/ad4e3cd4220230604a9b3354a652d2566cc1a322.jpeg"></a></p>
 <p>点进去就可以看到接入了多少个设备，多少个实体</p>
 <p>我们进入米家插座，就能看到很多信息，并且可以进行更丰富的控制和设置，更多高级的功能，期待你的发现和研究</p>
-<p><a href="#R-image-f1abec31000f53b95837e611c24427d1" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/103b0749a541718c1a75e8ecea1cb438338f0ee0.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-f1abec31000f53b95837e611c24427d1"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/103b0749a541718c1a75e8ecea1cb438338f0ee0.jpeg"></a></p>
+<p><a href="#R-image-65a03ae1381600e48426bda001bf065f" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/103b0749a541718c1a75e8ecea1cb438338f0ee0.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-65a03ae1381600e48426bda001bf065f"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/103b0749a541718c1a75e8ecea1cb438338f0ee0.jpeg"></a></p>
 
-            <footer class="footline">
-            </footer>
-          </article>
-
-        </div>
-      </main><script
+<script
   id="utteranc"
   src="https://utteranc.es/client.js"
   repo="cntv-chat/ha-box"
@@ -189,9 +184,19 @@
 </script>
 
 
+            <footer class="footline">
+            </footer>
+          </article>
+
+        </div>
+      </main>
     </div>
-    <script src="../../js/clipboard.min.js?1725547332" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1725547332" defer></script>
-    <script src="../../js/theme.js?1725547332" defer></script>
+    <script src="../../js/clipboard.min.js?1725700861" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1725700861" defer></script>
+    <script src="../../js/theme.js?1725700861" defer></script>
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+<span id="busuanzi_container_site_pv">本站总访问量 <span id="busuanzi_value_site_pv"></span> 次 · </span>
+<span id="busuanzi_container_site_uv">您是本站第 <span id="busuanzi_value_site_uv"></span> 位访问者</span>
+
   </body>
 </html>
