--- a/public/access/homekit/index.print.html
+++ b/public/access/homekit/index.print.html
@@ -35,18 +35,18 @@
     <link href="http://localhost:1313/access/homekit/index.html" rel="canonical" type="text/html" title="HA Box桥接米家设备到HomeKit :: HaBox 技术支持站">
     <link href="../../access/homekit/index.xml" rel="alternate" type="application/rss+xml" title="HA Box桥接米家设备到HomeKit :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1725547331" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725547331" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1725547331" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1725547331" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725547331" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1725547331" rel="stylesheet">
-    <link href="../../css/fonts.css?1725547331" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725547331" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1725547331" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1725547331" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1725547331" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1725547331" rel="stylesheet">
-    <link href="../../css/print.css?1725547331" rel="stylesheet" media="print">
-    <link href="../../css/format-print.css?1725547331" rel="stylesheet">
-    <script src="../../js/variant.js?1725547331"></script>
+    <link href="../../css/fontawesome-all.min.css?1725700861" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725700861" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1725700861" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1725700861" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725700861" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1725700861" rel="stylesheet">
+    <link href="../../css/fonts.css?1725700861" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725700861" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1725700861" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1725700861" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1725700861" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1725700861" rel="stylesheet">
+    <link href="../../css/print.css?1725700861" rel="stylesheet" media="print">
+    <link href="../../css/format-print.css?1725700861" rel="stylesheet">
+    <script src="../../js/variant.js?1725700861"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -115,35 +115,30 @@
 <p>接下来，我们通过 HomeKit Bridge 将 Home Assistant 中设备桥接到 HomeKit。</p>
 <p>首先，我们要添加 HomeKit Bridge 集成。点击“配置”，进入“设备与服务”页面。在“集成”选项下，点右下角“添加集成”
 然后输入“homekit” 或者&quot;apple&quot;</p>
-<p><a href="#R-image-e6ad93f86d532a2bfed4e679941011be" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/2405b767378b89b3a841ce13334d05cfc9061cf4.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-e6ad93f86d532a2bfed4e679941011be"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/2405b767378b89b3a841ce13334d05cfc9061cf4.jpeg"></a></p>
+<p><a href="#R-image-5989912f6d9f9f40849c07d8ecf2f9b6" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/2405b767378b89b3a841ce13334d05cfc9061cf4.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-5989912f6d9f9f40849c07d8ecf2f9b6"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/2405b767378b89b3a841ce13334d05cfc9061cf4.jpeg"></a></p>
 <p>点击“Apple”</p>
-<p><a href="#R-image-c713100e1c5127218bd3da8b73f13550" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/a0787982f4a5381754deb552770fda923788b729.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-c713100e1c5127218bd3da8b73f13550"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/a0787982f4a5381754deb552770fda923788b729.jpeg"></a></p>
+<p><a href="#R-image-ea134f23462b52e4b71960c707e18393" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/a0787982f4a5381754deb552770fda923788b729.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-ea134f23462b52e4b71960c707e18393"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/a0787982f4a5381754deb552770fda923788b729.jpeg"></a></p>
 <p>点击添加“HomeKit Bridge 集成”，按照指引完成添加。</p>
 <p>需要注意是的，如果你有温湿度传感器，点击“要添加的域”下拉选项，记得勾选“Sensor”，这个选项默认是不勾选的。</p>
-<p><a href="#R-image-6c8ff314ce33e08a44ca58f61376a1eb" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/b7f3383a80e1a1f04f3b092af7b8d0054d1eaa2a.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-6c8ff314ce33e08a44ca58f61376a1eb"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/b7f3383a80e1a1f04f3b092af7b8d0054d1eaa2a.jpeg"></a></p>
+<p><a href="#R-image-82996bb9ab62f7431c4f3fdb83b872fb" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/b7f3383a80e1a1f04f3b092af7b8d0054d1eaa2a.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-82996bb9ab62f7431c4f3fdb83b872fb"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/b7f3383a80e1a1f04f3b092af7b8d0054d1eaa2a.jpeg"></a></p>
 <p>添加 HomeKit Bridge 集成成功后，点击界面左下角的通知按钮。查看 homekit 的配对二维码。</p>
-<p><a href="#R-image-3d34c0365f77fbf96f5e0cf04449cfd9" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/b08589161582a58e794c2cb626c3ec44e2299ce0.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-3d34c0365f77fbf96f5e0cf04449cfd9"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/b08589161582a58e794c2cb626c3ec44e2299ce0.jpeg"></a></p>
-<p><a href="#R-image-4d36aa5be3f1b77e25331bfd9b0620f7" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/3718c6668fa3b68c066162da84fe46579fd3c855.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-4d36aa5be3f1b77e25331bfd9b0620f7"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/3718c6668fa3b68c066162da84fe46579fd3c855.jpeg"></a></p>
+<p><a href="#R-image-68d317fefb47b741351c25230a798853" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/b08589161582a58e794c2cb626c3ec44e2299ce0.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-68d317fefb47b741351c25230a798853"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/b08589161582a58e794c2cb626c3ec44e2299ce0.jpeg"></a></p>
+<p><a href="#R-image-10a306190b689fc76ea3154f6cedc2eb" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/3718c6668fa3b68c066162da84fe46579fd3c855.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-10a306190b689fc76ea3154f6cedc2eb"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/3718c6668fa3b68c066162da84fe46579fd3c855.jpeg"></a></p>
 <p>打开“家庭”应用，点击左上角的“+”号，选择“添加配件”。扫描上个步骤的得到的二维码，点击“添加到家庭”。在加入过程中，可能会提示“未认证设备”，点击“仍要添加”。然后完成剩余步骤，逐个添加设备。完成后，你就能能用Siri控制你的智能设备了。</p>
-<p><a href="#R-image-1231b15c184a83393fe397043acb011d" class="lightbox-link"><img alt="桥接homekit6.png" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/46651d4a69934aadba8c46c32b8d84a2ac6ce8ce.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-1231b15c184a83393fe397043acb011d"><img alt="桥接homekit6.png" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/46651d4a69934aadba8c46c32b8d84a2ac6ce8ce.jpeg"></a></p>
-<p><a href="#R-image-f17208183997d8df98ca8e27aaa2ed2b" class="lightbox-link"><img alt="桥接homekit7.png" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d9897e682d94ac340ab1a1aff6821f0dd09b2144.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-f17208183997d8df98ca8e27aaa2ed2b"><img alt="桥接homekit7.png" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d9897e682d94ac340ab1a1aff6821f0dd09b2144.jpeg"></a></p>
-<p><a href="#R-image-c180a8fc064127e9c9eb4f9333c7bfe8" class="lightbox-link"><img alt="桥接homekit8.png" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/a07d8ff1e7af35d33193fdba56efa787ba360d89.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-c180a8fc064127e9c9eb4f9333c7bfe8"><img alt="桥接homekit8.png" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/a07d8ff1e7af35d33193fdba56efa787ba360d89.jpeg"></a></p>
+<p><a href="#R-image-0013b8e6cc90a5d7140fff67ad850eb9" class="lightbox-link"><img alt="桥接homekit6.png" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/46651d4a69934aadba8c46c32b8d84a2ac6ce8ce.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-0013b8e6cc90a5d7140fff67ad850eb9"><img alt="桥接homekit6.png" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/46651d4a69934aadba8c46c32b8d84a2ac6ce8ce.jpeg"></a></p>
+<p><a href="#R-image-a793eba4a9ede7f2360d7edf73905ba1" class="lightbox-link"><img alt="桥接homekit7.png" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d9897e682d94ac340ab1a1aff6821f0dd09b2144.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-a793eba4a9ede7f2360d7edf73905ba1"><img alt="桥接homekit7.png" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d9897e682d94ac340ab1a1aff6821f0dd09b2144.jpeg"></a></p>
+<p><a href="#R-image-99f4baeed8cbb899e4ae48b04fada904" class="lightbox-link"><img alt="桥接homekit8.png" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/a07d8ff1e7af35d33193fdba56efa787ba360d89.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-99f4baeed8cbb899e4ae48b04fada904"><img alt="桥接homekit8.png" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/a07d8ff1e7af35d33193fdba56efa787ba360d89.jpeg"></a></p>
 <p>大功告成！</p>
 
-            <footer class="footline">
-            </footer>
-          </article>
-
-        </div>
-      </main><script
+<script
   id="utteranc"
   src="https://utteranc.es/client.js"
   repo="cntv-chat/ha-box"
@@ -167,9 +162,19 @@
 </script>
 
 
+            <footer class="footline">
+            </footer>
+          </article>
+
+        </div>
+      </main>
     </div>
-    <script src="../../js/clipboard.min.js?1725547331" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1725547331" defer></script>
-    <script src="../../js/theme.js?1725547331" defer></script>
+    <script src="../../js/clipboard.min.js?1725700861" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1725700861" defer></script>
+    <script src="../../js/theme.js?1725700861" defer></script>
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+<span id="busuanzi_container_site_pv">本站总访问量 <span id="busuanzi_value_site_pv"></span> 次 · </span>
+<span id="busuanzi_container_site_uv">您是本站第 <span id="busuanzi_value_site_uv"></span> 位访问者</span>
+
   </body>
 </html>
