--- a/public/installation/instructions/index.html
+++ b/public/installation/instructions/index.html
@@ -31,17 +31,17 @@
     <link href="../../installation/instructions/index.xml" rel="alternate" type="application/rss+xml" title=" HA盒子使用说明书（开箱即用） :: HaBox 技术支持站">
     <link href="../../installation/instructions/index.print.html" rel="alternate" type="text/html" title=" HA盒子使用说明书（开箱即用） :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1725608895" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725608895" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1725608895" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1725608895" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725608895" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1725608895" rel="stylesheet">
-    <link href="../../css/fonts.css?1725608895" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725608895" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1725608895" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1725608895" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1725608895" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1725608895" rel="stylesheet">
-    <link href="../../css/print.css?1725608895" rel="stylesheet" media="print">
-    <script src="../../js/variant.js?1725608895"></script>
+    <link href="../../css/fontawesome-all.min.css?1725700861" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725700861" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1725700861" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1725700861" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725700861" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1725700861" rel="stylesheet">
+    <link href="../../css/fonts.css?1725700861" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725700861" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1725700861" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1725700861" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1725700861" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1725700861" rel="stylesheet">
+    <link href="../../css/print.css?1725700861" rel="stylesheet" media="print">
+    <script src="../../js/variant.js?1725700861"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -138,38 +138,38 @@
 <p>首先，感谢您选择由“HABox智能家居盒子”提供的Home assistant智能家居盒子，下面请与我一起进入这个神秘的小盒子一探究竟。</p>
 <h2 id="等待欢迎界面">等待欢迎界面</h2>
 <p>拿到盒子后，连上网线，插上电源，开机……启动并加载完成，大概要等待2分半种。然后在浏览器地址栏输入<a href="http://homeassistant.local:8123/" rel="external" target="_self">http://homeassistant.local:8123</a> 进行访问，不出所料，您将看到如下欢迎界面。（你也可以在路由器后台查看具体ip地址，然后输入<a href="http://ip:8123/" rel="external" target="_self">http://ip:8123</a>进行访问）</p>
-<p><a href="#R-image-9c60cf61137ec58b463c44672b1023b2" class="lightbox-link"><img alt="202406190942917" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406190942917.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-9c60cf61137ec58b463c44672b1023b2"><img alt="202406190942917" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406190942917.png"></a></p>
+<p><a href="#R-image-14886f60e259618f4b33edada29b472e" class="lightbox-link"><img alt="202406190942917" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406190942917.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-14886f60e259618f4b33edada29b472e"><img alt="202406190942917" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406190942917.png"></a></p>
 <h2 id="基本设置">基本设置</h2>
 <h3 id="创建用户">创建用户</h3>
-<p><a href="#R-image-61c909c6022187b3d5f710c4f401a756" class="lightbox-link"><img alt="202406211526015" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211526015.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-61c909c6022187b3d5f710c4f401a756"><img alt="202406211526015" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211526015.png"></a></p>
+<p><a href="#R-image-af570710a9e381f53519044e0c2677fd" class="lightbox-link"><img alt="202406211526015" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211526015.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-af570710a9e381f53519044e0c2677fd"><img alt="202406211526015" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211526015.png"></a></p>
 <h3 id="选择家的位置">选择家的位置</h3>
 <p>这个地方如果搜索不到，您可以通过缩放地图，拖动地图中的位置图标到家所在的位置，然后是设置国家选项（如果是通过搜索找到的位置，就没有这个选项，系统自动设置了）</p>
-<p><a href="#R-image-14023fa6baeade28e22c98bf29d44fab" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/e44a5581acae451ff0707c4d898449c3e4e7b897.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-14023fa6baeade28e22c98bf29d44fab"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/e44a5581acae451ff0707c4d898449c3e4e7b897.png"></a></p>
-<p><a href="#R-image-e6a21bafaf0f468bbc234e299b13bdb9" class="lightbox-link"><img alt="202406211633570" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211633570.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-e6a21bafaf0f468bbc234e299b13bdb9"><img alt="202406211633570" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211633570.png"></a></p>
+<p><a href="#R-image-53f8e86d5c540a5c6063e8d797bf479e" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/e44a5581acae451ff0707c4d898449c3e4e7b897.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-53f8e86d5c540a5c6063e8d797bf479e"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/e44a5581acae451ff0707c4d898449c3e4e7b897.png"></a></p>
+<p><a href="#R-image-71462d7d5bc3defa16ff4b3601a636a7" class="lightbox-link"><img alt="202406211633570" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211633570.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-71462d7d5bc3defa16ff4b3601a636a7"><img alt="202406211633570" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211633570.png"></a></p>
 <h3 id="信息收集">信息收集</h3>
 <p>接下来是收集数据，建议不选，然后是自动发现家里的智能设备，直接点完成即可。</p>
-<p><a href="#R-image-b08704de5b2cda9312d65dc07cd4ce74" class="lightbox-link"><img alt="202406211635332" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635332.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-b08704de5b2cda9312d65dc07cd4ce74"><img alt="202406211635332" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635332.png"></a></p>
-<p><a href="#R-image-1ba221d88385c5867cce6512e3143ce5" class="lightbox-link"><img alt="202406211635546" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635546.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-1ba221d88385c5867cce6512e3143ce5"><img alt="202406211635546" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635546.png"></a></p>
+<p><a href="#R-image-ba23a447a55c38d143670728dce77264" class="lightbox-link"><img alt="202406211635332" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635332.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-ba23a447a55c38d143670728dce77264"><img alt="202406211635332" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635332.png"></a></p>
+<p><a href="#R-image-3e68384f1ac5e079e147ee33b011ad88" class="lightbox-link"><img alt="202406211635546" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635546.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-3e68384f1ac5e079e147ee33b011ad88"><img alt="202406211635546" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635546.png"></a></p>
 <h3 id="正式进入后台">正式进入后台</h3>
-<p><a href="#R-image-164b090e25a89fba8726e445566183c9" class="lightbox-link"><img alt="202406211637388" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211637388.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-164b090e25a89fba8726e445566183c9"><img alt="202406211637388" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211637388.png"></a></p>
+<p><a href="#R-image-8ab37425f12a37aadbf9d349f91b1775" class="lightbox-link"><img alt="202406211637388" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211637388.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-8ab37425f12a37aadbf9d349f91b1775"><img alt="202406211637388" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211637388.png"></a></p>
 <h3 id="升级和修复">升级和修复</h3>
 <p>您可能会发现左侧配置选项边上有如上图所示的数字提示，点进去</p>
 <p>该升级升级，该修复修复</p>
-<p><a href="#R-image-cf2a127161360f749a0aab48cb09a22d" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c664e0a2fa27ba6fc97a773560ed5975a97b49.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-cf2a127161360f749a0aab48cb09a22d"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c664e0a2fa27ba6fc97a773560ed5975a97b49.png"></a></p>
-<p><a href="#R-image-c1c43c4f37180f3437933c83f52baab8" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/0310e4b87dacb4a2aecd2cb2b5d1247dbe2acf54.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-c1c43c4f37180f3437933c83f52baab8"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/0310e4b87dacb4a2aecd2cb2b5d1247dbe2acf54.png"></a></p>
-<p><a href="#R-image-02651598d7f856b4b1933da249fbd7c7" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/f152df71ed02d594e08f2d4b0bc31e6186aa8d08.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-02651598d7f856b4b1933da249fbd7c7"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/f152df71ed02d594e08f2d4b0bc31e6186aa8d08.png"></a></p>
-<p><a href="#R-image-4cef84b373a158709c32f2e399e3800d" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/eb2058a97322851ba59fcfe3be5cd3aaa18b84f3.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-4cef84b373a158709c32f2e399e3800d"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/eb2058a97322851ba59fcfe3be5cd3aaa18b84f3.png"></a></p>
+<p><a href="#R-image-dc197a6ab680d136a584b4362104fccb" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c664e0a2fa27ba6fc97a773560ed5975a97b49.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-dc197a6ab680d136a584b4362104fccb"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c664e0a2fa27ba6fc97a773560ed5975a97b49.png"></a></p>
+<p><a href="#R-image-f80964a019098c1d52847c611e0c30ca" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/0310e4b87dacb4a2aecd2cb2b5d1247dbe2acf54.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-f80964a019098c1d52847c611e0c30ca"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/0310e4b87dacb4a2aecd2cb2b5d1247dbe2acf54.png"></a></p>
+<p><a href="#R-image-1872d3c80c4296ddaf2edfc6ee754a80" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/f152df71ed02d594e08f2d4b0bc31e6186aa8d08.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-1872d3c80c4296ddaf2edfc6ee754a80"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/f152df71ed02d594e08f2d4b0bc31e6186aa8d08.png"></a></p>
+<p><a href="#R-image-dc0411399f93415051e37e389fbc3e0e" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/eb2058a97322851ba59fcfe3be5cd3aaa18b84f3.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-dc0411399f93415051e37e389fbc3e0e"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/eb2058a97322851ba59fcfe3be5cd3aaa18b84f3.png"></a></p>
 <h3 id="结束语">结束语</h3>
 <p>到此，您基本上就可以根据自身情况进行设备的接入和控制了，请持续关注我们，我们将持续发布使用HomeAssistant盒子相关的使用说明！</p>
 
@@ -267,13 +267,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../../js/auto-complete.js?1725608895" defer></script>
-        <script src="../../js/lunr/lunr.min.js?1725608895" defer></script>
-        <script src="../../js/lunr/lunr.stemmer.support.min.js?1725608895" defer></script>
-        <script src="../../js/lunr/lunr.multi.min.js?1725608895" defer></script>
-        <script src="../../js/lunr/lunr.en.min.js?1725608895" defer></script>
-        <script src="../../js/lunr/lunr.zh.min.js?1725608895" defer></script>
-        <script src="../../js/search.js?1725608895" defer></script>
+        <script src="../../js/auto-complete.js?1725700861" defer></script>
+        <script src="../../js/lunr/lunr.min.js?1725700861" defer></script>
+        <script src="../../js/lunr/lunr.stemmer.support.min.js?1725700861" defer></script>
+        <script src="../../js/lunr/lunr.multi.min.js?1725700861" defer></script>
+        <script src="../../js/lunr/lunr.en.min.js?1725700861" defer></script>
+        <script src="../../js/lunr/lunr.zh.min.js?1725700861" defer></script>
+        <script src="../../js/search.js?1725700861" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -364,10 +364,12 @@
       </div>
     </aside>
 
-    <script src="../../js/clipboard.min.js?1725608895" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1725608895" defer></script>
-    <script src="../../js/theme.js?1725608895" defer></script>
-
+    <script src="../../js/clipboard.min.js?1725700861" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1725700861" defer></script>
+    <script src="../../js/theme.js?1725700861" defer></script>
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+<span id="busuanzi_container_site_pv">本站总访问量 <span id="busuanzi_value_site_pv"></span> 次 · </span>
+<span id="busuanzi_container_site_uv">您是本站第 <span id="busuanzi_value_site_uv"></span> 位访问者</span>
 
   </body>
 </html>
