--- a/public/network/index.html
+++ b/public/network/index.html
@@ -26,17 +26,17 @@
     <link href="../network/index.xml" rel="alternate" type="application/rss+xml" title="网络技术 :: HaBox 技术支持站">
     <link href="../network/index.print.html" rel="alternate" type="text/html" title="网络技术 :: HaBox 技术支持站"><link rel="icon" href="../images/favicon.png" type="image/png">
 
-    <link href="../css/fontawesome-all.min.css?1725608895" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1725608895" rel="stylesheet"></noscript>
-    <link href="../css/nucleus.css?1725608895" rel="stylesheet">
-    <link href="../css/auto-complete.css?1725608895" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1725608895" rel="stylesheet"></noscript>
-    <link href="../css/perfect-scrollbar.min.css?1725608895" rel="stylesheet">
-    <link href="../css/fonts.css?1725608895" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1725608895" rel="stylesheet"></noscript>
-    <link href="../css/theme.css?1725608895" rel="stylesheet">
-    <link href="../css/theme-relearn-auto.css?1725608895" rel="stylesheet" id="R-variant-style">
-    <link href="../css/chroma-relearn-auto.css?1725608895" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../css/variant.css?1725608895" rel="stylesheet">
-    <link href="../css/print.css?1725608895" rel="stylesheet" media="print">
-    <script src="../js/variant.js?1725608895"></script>
+    <link href="../css/fontawesome-all.min.css?1725700861" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1725700861" rel="stylesheet"></noscript>
+    <link href="../css/nucleus.css?1725700861" rel="stylesheet">
+    <link href="../css/auto-complete.css?1725700861" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1725700861" rel="stylesheet"></noscript>
+    <link href="../css/perfect-scrollbar.min.css?1725700861" rel="stylesheet">
+    <link href="../css/fonts.css?1725700861" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1725700861" rel="stylesheet"></noscript>
+    <link href="../css/theme.css?1725700861" rel="stylesheet">
+    <link href="../css/theme-relearn-auto.css?1725700861" rel="stylesheet" id="R-variant-style">
+    <link href="../css/chroma-relearn-auto.css?1725700861" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../css/variant.css?1725700861" rel="stylesheet">
+    <link href="../css/print.css?1725700861" rel="stylesheet" media="print">
+    <script src="../js/variant.js?1725700861"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..';
@@ -205,13 +205,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../js/auto-complete.js?1725608895" defer></script>
-        <script src="../js/lunr/lunr.min.js?1725608895" defer></script>
-        <script src="../js/lunr/lunr.stemmer.support.min.js?1725608895" defer></script>
-        <script src="../js/lunr/lunr.multi.min.js?1725608895" defer></script>
-        <script src="../js/lunr/lunr.en.min.js?1725608895" defer></script>
-        <script src="../js/lunr/lunr.zh.min.js?1725608895" defer></script>
-        <script src="../js/search.js?1725608895" defer></script>
+        <script src="../js/auto-complete.js?1725700861" defer></script>
+        <script src="../js/lunr/lunr.min.js?1725700861" defer></script>
+        <script src="../js/lunr/lunr.stemmer.support.min.js?1725700861" defer></script>
+        <script src="../js/lunr/lunr.multi.min.js?1725700861" defer></script>
+        <script src="../js/lunr/lunr.en.min.js?1725700861" defer></script>
+        <script src="../js/lunr/lunr.zh.min.js?1725700861" defer></script>
+        <script src="../js/search.js?1725700861" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -302,10 +302,12 @@
       </div>
     </aside>
 
-    <script src="../js/clipboard.min.js?1725608895" defer></script>
-    <script src="../js/perfect-scrollbar.min.js?1725608895" defer></script>
-    <script src="../js/theme.js?1725608895" defer></script>
-
+    <script src="../js/clipboard.min.js?1725700861" defer></script>
+    <script src="../js/perfect-scrollbar.min.js?1725700861" defer></script>
+    <script src="../js/theme.js?1725700861" defer></script>
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+<span id="busuanzi_container_site_pv">本站总访问量 <span id="busuanzi_value_site_pv"></span> 次 · </span>
+<span id="busuanzi_container_site_uv">您是本站第 <span id="busuanzi_value_site_uv"></span> 位访问者</span>
 
   </body>
 </html>
